# gameboy-emulator

./: .gitignore  CMakeLists.txt  README.md
include/: bootrom.h  bus.h  cartridge.h  cpu.h  gameboy.h  joypad.h  ppu.h  ram.h  serial.h  sound.h  timers.h
include/mbc/: mbc.h  mbc1.h  mbc3.h
src/: bootrom.cpp  bus.cpp  cartridge.cpp  cpu.cpp  gameboy.cpp  joypad.cpp  main.cpp  ppu.cpp  ram.cpp  serial.cpp  timers.cpp
src/mbc/: mbc1.cpp  mbc3.cpp
